chore: Apply spotless format